testsuite/tests/grammar/invalid_null_field/should_be_null.lkt
# Check that "non null" parse fields which are built with "null" parsers only
# are rejected.

from lexer_example import foo_lexer

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Holder(null(Holder))
}

@abstract class FooNode implements Node[FooNode] {
}

class Holder : FooNode {
    @parse_field @nullable f: Holder
}
